Fix styling on iOS

--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -7,7 +7,7 @@ page-feed {
   }
 
   .item ion-thumbnail {
-    min-height: 6rem;
+    min-height: 4.5rem;
     &> img {
       border-radius: 2px;
     }
